# smart-home-hidden-communication-patterns

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Dockerfile  README.md  build.sh  config.template.yaml  config.yaml  custom_types.py  docker-compose.yaml  experiments.py  metrics.ipynb  requirements.txt  signature_extraction.ipynb
devices/: .gitignore  CMakeLists.txt  devices.yaml  failed_events.json
devices/cameras/DLinkCamera/node_pruning/boot/0_root/traces/: 1741796843.anon.pcap  1741796969.anon.pcap  1741797105.anon.pcap  1741797232.anon.pcap  1741797376.anon.pcap  1741797524.anon.pcap  1741797668.anon.pcap  1741797815.anon.pcap  1741797948.anon.pcap  1741798088.anon.pcap  1741798213.anon.pcap  1741798347.anon.pcap  1741798475.anon.pcap  1741798611.anon.pcap  1741798742.anon.pcap  1741798892.anon.pcap  1741799043.anon.pcap  1741799178.anon.pcap  1741799311.anon.pcap  1741799433.anon.pcap
devices/cameras/DLinkCamera/node_pruning/boot/1_192.168.1.115-192.168.1.1_UDP_dst_53_DNS_response-False_qtype-AAAA_domain-name-mp-us-sas.auto.mydlink.com_1741799588/traces/: 1741815971.anon.pcap  1741816093.anon.pcap  1741816216.anon.pcap  1741816344.anon.pcap  1741816469.anon.pcap  1741816606.anon.pcap  1741816730.anon.pcap  1741816871.anon.pcap  1741817017.anon.pcap  1741817163.anon.pcap  1741817296.anon.pcap  1741817446.anon.pcap  1741817582.anon.pcap  1741817728.anon.pcap  1741817876.anon.pcap  1741818009.anon.pcap  1741818140.anon.pcap  1741818266.anon.pcap  1741818392.anon.pcap  1741818527.anon.pcap
devices/cameras/DLinkCamera/node_pruning/boot/1_192.168.1.115-192.168.1.1_UDP_dst_53_DNS_response-False_qtype-A_domain-name-ca-mgr.auto.mydlink.com_1741799588/traces/: 1741799601.anon.pcap  1741799728.anon.pcap  1741799865.anon.pcap  1741800004.anon.pcap  1741800126.anon.pcap  1741800251.anon.pcap  1741800378.anon.pcap  1741800517.anon.pcap  1741800666.anon.pcap  1741800796.anon.pcap  1741800933.anon.pcap  1741801081.anon.pcap  1741801211.anon.pcap  1741801356.anon.pcap  1741801485.anon.pcap  1741801610.anon.pcap  1741801739.anon.pcap  1741801889.anon.pcap  1741802011.anon.pcap  1741802133.anon.pcap
devices/cameras/DLinkCamera/node_pruning/boot/1_192.168.1.115-224.0.0.251_UDP_src_5353_dst_5353_DNS_response-False_domain-name-DCS-8000LH-B0C554435483.local_1741799588/traces/: 1741805029.anon.pcap  1741805154.anon.pcap  1741805299.anon.pcap  1741805436.anon.pcap  1741805574.anon.pcap  1741805717.anon.pcap  1741805865.anon.pcap  1741806000.anon.pcap  1741806133.anon.pcap  1741806284.anon.pcap  1741806407.anon.pcap  1741806540.anon.pcap  1741806664.anon.pcap  1741806787.anon.pcap  1741806936.anon.pcap  1741807082.anon.pcap  1741807218.anon.pcap  1741807352.anon.pcap  1741807496.anon.pcap  1741807643.anon.pcap
devices/cameras/DLinkCamera/node_pruning/boot/1_192.168.1.115-224.0.0.251_UDP_src_5353_dst_5353_DNS_response-False_qtype-PTR_domain-name-_dcp._tcp.local_1741799588/traces/: 1741810524.anon.pcap  1741810657.anon.pcap  1741810790.anon.pcap  1741810941.anon.pcap  1741811088.anon.pcap  1741811209.anon.pcap  1741811349.anon.pcap  1741811472.anon.pcap  1741811616.anon.pcap  1741811765.anon.pcap  1741811903.anon.pcap  1741812025.anon.pcap  1741812168.anon.pcap  1741812293.anon.pcap  1741812416.anon.pcap  1741812541.anon.pcap  1741812673.anon.pcap  1741812814.anon.pcap  (+2 more)
devices/cameras/XiaomiCamera/node_pruning/boot/: tree.json
devices/lights/HueLightEssentials/node_pruning/set_color/: tree.json
devices/lights/HueLightSmartThings/node_pruning/toggle/: tree.json
devices/lights/TapoLight/node_pruning/set_color/: tree.json
devices/lights/TuyaLight/node_pruning/toggle/: tree.json
devices/plugs/SmartThingsOutlet/node_pruning/toggle/: tree.json
devices/plugs/TpLinkPlug/node_pruning/toggle/: tree.json
devices/plugs/TuyaPlug/node_pruning/boot/: tree.json
(+5269 files in other folders)
