# Minimum required CMake version
cmake_minimum_required(VERSION 3.20)

set(EXECUTABLE_OUTPUT_PATH ${BIN_DIR})

if( DEFINED ENV{DEVICE} AND DEFINED ENV{HEURISTIC} AND DEFINED ENV{EVENT} AND DEFINED ENV{NFQUEUE} )
    file(GLOB V_GLOB LIST_DIRECTORIES true "$ENV{DEVICE}/$ENV{HEURISTIC}/$ENV{EVENT}/$ENV{NFQUEUE}")
    foreach(item ${V_GLOB})
        if (IS_DIRECTORY ${item})
            # Check if subdirectory contains CMakeLists.txt
            FILE(GLOB containsCMakeLists "${item}/CMakeLists.txt")
            if(containsCMakeLists)
                add_subdirectory(${item})
            endif()
        endif()
    endforeach()
elseif( DEFINED ENV{DEVICE} AND DEFINED ENV{HEURISTIC} AND ( NOT DEFINED ENV{EVENT} OR NOT DEFINED ENV{NFQUEUE} ) )
    file(GLOB V_GLOB LIST_DIRECTORIES true "$ENV{DEVICE}/$ENV{HEURISTIC}/*/*")
    foreach(item ${V_GLOB})
        if (IS_DIRECTORY ${item})
            # Check if subdirectory contains CMakeLists.txt
            FILE(GLOB containsCMakeLists "${item}/CMakeLists.txt")
            if(containsCMakeLists)
                add_subdirectory(${item})
            endif()
        endif()
    endforeach()
elseif( DEFINED ENV{DEVICE} AND ( NOT DEFINED ENV{EVENT} OR NOT DEFINED ENV{NFQUEUE} ) )
    file(GLOB V_GLOB LIST_DIRECTORIES true "$ENV{DEVICE}/*/*/*")
    foreach(item ${V_GLOB})
        if (IS_DIRECTORY ${item})
            # Check if subdirectory contains CMakeLists.txt
            FILE(GLOB containsCMakeLists "${item}/CMakeLists.txt")
            if(containsCMakeLists)
                add_subdirectory(${item})
            endif()
        endif()
    endforeach()
else()
    file(GLOB V_GLOB LIST_DIRECTORIES true "*/*/*/*")
    foreach(item ${V_GLOB})
        if (IS_DIRECTORY ${item})
            # Check if subdirectory contains CMakeLists.txt
            FILE(GLOB containsCMakeLists "${item}/CMakeLists.txt")
            if(containsCMakeLists)
                add_subdirectory(${item})
            endif()
        endif()
    endforeach()
endif()
